--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link href="./assets/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
+  <link href="styles.css" rel="stylesheet">
   <title>Clock App</title>
 </head>
 
