--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,19 @@
 </head>
 
 <body>
-  , it's currently
+  <div class="page-wrap">
+    , it's currently
 
-  in
+    in
 
-  More
-  Less
+    More
+    Less
 
-  Current timezone
-  Day of the year
-  Day of the week
-  Week number
+    Current timezone
+    Day of the year
+    Day of the week
+    Week number
+  </div>
 </body>
+
 </html>
